# anthropic_study_material

./: .gitignore  CLAUDE.md  USEFUL_LINKS.md  agentic_architecture.txt  ai_cap_limitations.txt  ai_fluency.txt  ai_fluency_smb.txt  building_with_claude_api.txt  claude_code_101.txt  claude_code_in_action.txt  claude_platform_101.txt  extracted-questions-set-3.md  intro_to_claude_cowork.txt  mcp.txt  medium_data_science.txt
docs/reference/: README.md
exam-trainer/: .gitignore  README.md  app.py  build_bank.py  diagnostician.py  generator.py  parse_guide.py  pyproject.toml  questions.json  screens_extracted.json
exam-trainer/static/: app.js  index.html  style.css
exam-trainer/tests/: conftest.py  e2e_nav.mjs  test_api_core.py  test_bank_integrity.py  test_build_bank.py  test_diagnostician.py  test_e2e_navigation.py  test_generator.py  test_stats_and_weak.py
mock-exam/: README.md  index.html  package-lock.json  package.json
mock-exam/public/: blueprint.json
mock-exam/public/bank/: S1.json  S2.json  S3.json  S4.json  S5.json  S6.json
mock-exam/scripts/: length-bias.mjs  margin-list.mjs  rebalance-report.mjs  validate-bank.mjs
mock-exam/src/: main.tsx  router.tsx  theme.css  types.ts
mock-exam/src/components/: Footer.tsx  QuestionCard.tsx  QuestionNav.tsx  RichText.tsx  TopBar.tsx
mock-exam/src/lib/: loadData.ts  scoring.ts  session.ts
mock-exam/src/routes/: Exam.tsx  Results.tsx  Start.tsx
mock-exam/src/state/: examStore.tsx
queries/: .gitignore  CLAUDE.md
